# iso-enum

./: .coveragerc  .gitignore  CONTRIBUTING.rst  README.md  README.rst  manage.py  pyproject.toml  setup.cfg
.github/workflows/: test.yml
doc/: requirements.txt
doc/source/: changelog.rst  conf.py  index.rst  reference.rst  usage.rst
iso3166/: __init__.py
iso3166/generate/: generate_enums.py
iso_enum/: __init__.py
iso_enum/iso3166/: ISOCountry.py
iso_enum/iso3166/django/: ISOCountry.py
iso_enum/iso639/: ISOLanguage.py
iso_enum/tests/: settings.py  tests.py
iso_enum/tests/iso3166/: ISOCountry.py
iso_enum/tests/iso3166/django/: ISOCountry.py
iso_enum/tests/iso639/: ISOLanguage.py
standards/: iso639-1.csv  iso_country_code_ALL_csv.zip.gpg
