[tool.poetry]
name = "lavote-interpolator"
version = "0.1.0"
description = "Track and interpolate LA County Election Returns."
authors = ["Brian Kohan <bckohan@gmail.com>"]
license = "MIT"
repository = "https://github.com/bckohan/lavote_interpolator"
homepage = ""
readme = "README.rst"
keywords = ["enum",  "properties", "defines", "field", "django", "database"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2.28.1"
ipython = "^8.6.0"
python-dateutil = "^2.8.2"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
