[tool.poetry]
name = "iso3166-enum"
version = "0.1.0"
description = "Python enumerations for iso3166 country and region codes."
authors = ["Brian Kohan <bckohan@gmail.com>"]
license = "UNLICENSE"
repository = "https://github.com/bckohan/iso3166-enum"
homepage = ""
readme = "README.rst"
keywords = ["enum",  "iso3166", "country", "region"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
include = [
    "LICENSE",
]

packages = [
    { include = "iso3166" }
]
exclude = [
    "iso3166/tests",
    "iso3166/generate"
]

[tool.poetry.scripts]
generate = 'iso3166.generate.generate_enums:main'

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
enum-properties = "^1.3.1"

[tool.poetry.group.dev.dependencies]
Jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
