[tool.poetry]
name = "iso-enum"
version = "0.1.0"
description = "Python enumerations for ISO 3166 country and region codes, ISO 639 language codes and ISO 4217 currency codes."
authors = ["Brian Kohan <bckohan@gmail.com>"]
license = "UNLICENSE"
repository = "https://github.com/bckohan/iso-enum"
homepage = ""
readme = "README.rst"
keywords = [
    "enum",  "iso3166", "iso639", "iso4217", "ISO", "standard", "language",
    "currency", "639", "3166", "4217", "subdivision", "territory","country",
    "region"
]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
include = [
    "LICENSE",
]

packages = [
    { include = "iso_enum" }
]
exclude = [
    "iso_enum/tests",
    "bin"
]

[tool.poetry.scripts]
generate = 'bin.generate:main'

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
enum-properties = "^1.3.1"

[tool.poetry.group.dev.dependencies]
Jinja2 = "^3.1.2"
pytest = "^7.2.0"
isort = "^5.10.1"
pylint = "^2.12.0"
readme-renderer = "^37.3"
coverage = "^7.2.6"
safety = "^2.3.2"
pytest-cov = "^4.0.0"
darglint = "^1.8.1"
mypy = "^0.991"
doc8 = "^0.11.0"
sphinx-rtd-theme = "^1.1.1"
Sphinx = "^5.3.0"
sphinx-argparse = "^0.4.0"
django-enum = "^1.1.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
